added option to automatically create survey footprint from ra and dec ranges (stripes).

--- a/examples/example_survey_overlap.ipynb
+++ b/examples/example_survey_overlap.ipynb
@@ -119,7 +119,11 @@
    "id": "142ebdb8",
    "metadata": {},
    "source": [
-    "**NOTE:** You can recover this same result via `hera_stripe = hera_cc_utils.field_to_healpix(-35, -25)`."
+    "**NOTE:** You can recover this same result in two other ways now:\n",
+    "- `hera_stripe = hera_cc_utils.field_to_healpix(-35, -25)`.\n",
+    "- `hera_stripe = hera_cc.Map(data='hera')`\n",
+    "\n",
+    "Just note that in the first case, the variable `hera_stripe` is an array, while in the second, it is a `hera_cc_utils.Map` instance."
    ]
   },
   {
