forgot to save latest updates

--- a/examples/example_catalogs.ipynb
+++ b/examples/example_catalogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a71e021b",
+   "id": "ac76cc96",
    "metadata": {},
    "source": [
     "# Example: comparing survey fields to galaxy/QSO catalogs"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba0ed6a9",
+   "id": "e4228b96",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8f8aec",
+   "id": "95c6f294",
    "metadata": {},
    "source": [
     "To start, let's grab a set of maps, including the GSM (for background color-scale), and survey footprints for HERA, Roman, and Euclid:"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "db06a7c7",
+   "id": "f85ea776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712f731a",
+   "id": "9bddb5e3",
    "metadata": {},
    "source": [
     "We also have the survey fields for the wide-field surveys being done by Subaru HSC:"
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "bbc799e7",
+   "execution_count": 3,
+   "id": "65f29c39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcf36e1",
+   "id": "ccb5b726",
    "metadata": {},
    "source": [
     "Now, let's compare these various survey fields:"
@@ -84,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "11a23f3d",
+   "execution_count": 4,
+   "id": "726326e5",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "(-40.0, 8.0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5309701b",
+   "id": "5b087f0b",
    "metadata": {},
    "source": [
     "The HSC surveys are too far north for overlap with HERA. Could've figured this out easily just be reading off the Dec range, but here it is."
@@ -142,47 +142,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c54d78",
+   "id": "01ab410d",
    "metadata": {},
    "source": [
-    "Finally, let's see if there are any quasars in the HERA stripe. We've started transcribing the basic properties of known quasars in the right declination range, $-35 \\lesssim \\delta \\lesssim -25$, in `hera_cc_utils.catalog`"
+    "Finally, let's see if there are any quasars in the HERA stripe. We've started transcribing the basic properties of known quasars in the right declination range, $-35 \\lesssim \\delta \\lesssim -25$, in `hera_cc_utils.catalog`, though the collection is very likely incomplete.\n",
+    "\n",
+    "First, let's plot the HERA stripe as per usual, and then overplot the positions of all QSOs we know about so far:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "78fb8581",
+   "execution_count": 5,
+   "id": "e47066b0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not in F1: 0 J2348–3054 23.809260000000002 -30.902844444444444 6.9007 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 1 J0109–3047 1.1647583333333333 -30.79063888888889 6.745 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 2 J0305–3150 3.0880333333333336 -31.848888888888887 6.604 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 3 J0328−3253 3.4765308333333333 -32.8897 5.86 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 4 J0046–2837 0.7732347222222222 -28.629816666666667 5.9926 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 5 J2211–3206 22.186775277777777 -32.10359722222223 6.3394 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 6 J2318–3029 23.309195277777782 -30.4926 6.1456 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 7 PSO 231-20 15.443840000000003 -20.8335 6.5864 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "in F1: 8 PSO J037.9706–28.8389 2.5313777777777777 -28.838916666666666 5.99 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 9 PSO J065.4085–26.9543 4.360569166666666 -26.95433611111111 6.1871 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "in F1: 10 J025.6821-33.4627 1.7121400000000002 -33.4627 6.31 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 11 J332.8017−32.1036 22.186780000000002 -32.1036 6.32 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "in F1: 12 J0142−3327 1.4200000000000002 -33.27 6.3379 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "in F1: 13 J0148−2826 1.4800000000000002 -28.26 6.54 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 14 J2002−3013 20.020000000000003 -30.13 6.67 <class 'numpy.float64'> <class 'numpy.float64'>\n",
-      "Not in F1: 15 J2318–3113 23.305097500000002 -31.229541666666666 6.444 <class 'numpy.float64'> <class 'numpy.float64'>\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(12.0, 0.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,22 +203,25 @@
     "\n",
     "for i, qso in enumerate(qsos):\n",
     "    ra, dec, z = qso\n",
-    "    \n",
-    "    if lst_cuts[0][0] <= ra <= lst_cuts[0][1]:\n",
-    "        print('in F1:', i, names[i], ra, dec, z, type(ra), type(dec))\n",
-    "    else:\n",
-    "        print('Not in F1:', i, names[i], ra, dec, z, type(ra), type(dec))\n",
-    "        \n",
-    "        \n",
     "    ax.scatter(ra, dec, color='w', marker='x')\n",
     "\n",
     "ax.set_xlim(12, 0)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "052d190b",
+   "metadata": {},
+   "source": [
+    "Looks like we've got some! \n",
+    "\n",
+    "**NOTE: so far this is only set up to work when over-plotting on maps in recti-linear projection.** "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47089af9",
+   "id": "23f12883",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -246,15 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5dbd80a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abe01dc5",
+   "id": "688b818b",
    "metadata": {},
    "outputs": [],
    "source": []
